# api/v1alpha1/openapi.yaml
@@ -113,7 +113,36 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
-
+    put:
+      summary: Update an application
+      operationId: applyApplication
+      description: Update a DCM application based on unique ID
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        '200':
+          description: Updated Content
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApplicationResponse'
+        '400':
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
 
 components:
   schemas:
